<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_ae"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginRight="@dimen/margin_padding_4"
                android:layout_weight="1"
                android:elevation="@dimen/margin_padding_4"
                android:layout_marginEnd="@dimen/margin_padding_4"
                app:cardCornerRadius="@dimen/margin_padding_4">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/uae"
                    android:src="@drawable/ae" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_de"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginLeft="@dimen/margin_padding_4"
                android:layout_weight="1"
                android:elevation="@dimen/margin_padding_4"
                android:layout_marginStart="@dimen/margin_padding_4"
                app:cardCornerRadius="@dimen/margin_padding_4">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/german"
                    android:src="@drawable/de" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_eg"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginRight="@dimen/margin_padding_4"
                android:layout_weight="1"
                android:elevation="@dimen/margin_padding_4"
                android:layout_marginEnd="@dimen/margin_padding_4"
                app:cardCornerRadius="@dimen/margin_padding_4">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/egypt"
                    android:src="@drawable/eg" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_fr"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginLeft="@dimen/margin_padding_4"
                android:layout_weight="1"
                android:elevation="@dimen/margin_padding_4"
                android:layout_marginStart="@dimen/margin_padding_4"
                app:cardCornerRadius="@dimen/margin_padding_4">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/franch"
                    android:src="@drawable/fr" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_padding_8">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_gb"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginRight="@dimen/margin_padding_4"
                android:layout_weight="1"
                android:elevation="@dimen/margin_padding_4"
                android:layout_marginEnd="@dimen/margin_padding_4"
                app:cardCornerRadius="@dimen/margin_padding_4">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/uk"
                    android:src="@drawable/gb" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_ru"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginLeft="@dimen/margin_padding_4"
                android:layout_weight="1"
                android:elevation="@dimen/margin_padding_4"
                android:layout_marginStart="@dimen/margin_padding_4"
                app:cardCornerRadius="@dimen/margin_padding_4">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/russia"
                    android:src="@drawable/ru" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_padding_8">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_tr"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginRight="@dimen/margin_padding_4"
                android:layout_weight="1"
                android:elevation="@dimen/margin_padding_4"
                android:layout_marginEnd="@dimen/margin_padding_4"
                app:cardCornerRadius="@dimen/margin_padding_4">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/turkey"
                    android:src="@drawable/tr" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_us"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginLeft="@dimen/margin_padding_4"
                android:layout_weight="1"
                android:elevation="@dimen/margin_padding_4"
                android:layout_marginStart="@dimen/margin_padding_4"
                app:cardCornerRadius="@dimen/margin_padding_4">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/usa"
                    android:src="@drawable/us" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>
</ScrollView>